# micropython-default

./: README.md  pyproject.toml
src/micropython_default/: main.py
src/micropython_default/lib/project/: connection.py  telemetry.py  utility.py
src/micropython_default/server/: index.html
